<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_firstApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstApp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/texto"
        />

    <Button
        android:id="@+id/btn_clickerApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clickerApp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_firstApp"
        />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>